Fix dark mode to load dark background

--- a/src/styles/Hydrogen/style-dark.css
+++ b/src/styles/Hydrogen/style-dark.css
@@ -7695,7 +7695,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #fh5co-board .item {
   margin: 10px 10px 20px 10px;
-  background: #fff;
+  background: #1d1d1d;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
